Oct 28, 2023. (User and Admin now have login page)

--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -40,8 +40,8 @@
                         <h3>Opps! This page Could Not Be Found!</h3>
                         <p>Sorry bit the page you are looking for does not exist, have been removed or name changed</p>
                         <form action="#" class="search-404">
-                            <input type="text" placeholder="Enter your keyword">
-                            <button type="submit"><i class="fa fa-search"></i></button>
+<!--                            <input type="text" placeholder="Enter your keyword">-->
+<!--                            <button type="submit"><i class="fa fa-search"></i></button>-->
                         </form>
                         <a href="/"><i class="fa fa-home"></i> Go back home</a>
                     </div>
@@ -58,7 +58,7 @@
             <i class="fa fa-close"></i>
         </div>
         <div class="canvas-search search-switch">
-            <i class="fa fa-search"></i>
+<!--            <i class="fa fa-search"></i>-->
         </div>
         <nav class="canvas-menu mobile-menu">
             <ul>
@@ -129,7 +129,7 @@
                 <div class="col-lg-3">
                     <div class="top-option">
                         <div class="to-search search-switch">
-                            <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+<!--                            <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;-->
                             <a href="/userLogin"><i class="fa fa-user"></i></a>
                         </div>
                         <div class="to-social">
@@ -158,7 +158,7 @@
                             <div class="hi-text">
                                 <span>Embrace the Challenge, Transform Your Physique.</span>
                                 <h1>Resilience, fueled by  <strong>grit</strong></h1>
-                                <a href="/registration" class="primary-btn">Register Now</a>
+                                <a href="/userRegistration" class="primary-btn">Register Now</a>
                             </div>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                             <div class="hi-text">
                                 <span>Shape your body</span>
                                 <h1>Unleash your <strong>grit</strong>, Elevate Your Fitness</h1>
-                                <a href="/registration" class="primary-btn">Sign-Up/Login</a>
+                                <a href="/userRegistration" class="primary-btn">Sign-Up/Login</a>
                             </div>
                         </div>
                     </div>
@@ -311,7 +311,7 @@
                     <div class="bs-text">
                         <h2>Seize the Opportunity: Register Now for Exclusive Deals!</h2>
                         <div class="bt-tips">Where Grit and Muscle Forge the Ultimate You.</div>
-                        <a href="/registration" class="primary-btn  btn-normal">Appointment</a>
+                        <a href="/userRegistration" class="primary-btn  btn-normal">Appointment</a>
                     </div>
                 </div>
             </div>
@@ -346,7 +346,7 @@
                             <li><b>You Decide:</b> You can choose how often you want to do the exercises.</li>
                             <li><b>Personalized:</b> Provides you a workout-specific based on your goals.</li>
                         </ul>
-                        <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
                         <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                     </div>
                 </div>
@@ -365,7 +365,7 @@
                             <li><b>See Progress:</b> You'll notice you're getting better and stronger.</li>
 
                         </ul>
-                        <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
                         <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                     </div>
                 </div>
@@ -383,7 +383,7 @@
                             <li><b>Continuous Support:</b> Ongoing assistance as you progress on your journey.</li>
 
                         </ul>
-                        <a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+                        <a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
                         <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                     </div>
                 </div>
