--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -38,7 +38,7 @@
         <i class="fa fa-close"></i>
     </div>
     <div class="canvas-search search-switch">
-        <i class="fa fa-search"></i>
+<!--        <i class="fa fa-search"></i>-->
     </div>
     <nav class="canvas-menu mobile-menu">
         <ul>
@@ -109,7 +109,7 @@
             <div class="col-lg-3">
                 <div class="top-option">
                     <div class="to-search search-switch">
-                        <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+<!--                        <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;-->
                         <a href="/userLogin"><i class="fa fa-user"></i></a>
                     </div>
                     <div class="to-social">
@@ -262,7 +262,7 @@
                             <span>Our Team</span>
                             <h2>TRAIN WITH GRIT DOMINATE</h2>
                         </div>
-                        <a href="/registration" class="primary-btn btn-normal appoinment-btn">Register Now</a>
+                        <a href="/userRegistration" class="primary-btn btn-normal appoinment-btn">Register Now</a>
                     </div>
                 </div>
             </div>
@@ -330,7 +330,7 @@
                     <div class="bs-text">
                         <h2>Seize the Opportunity: Register Now for Exclusive Deals!</h2>
                         <div class="bt-tips">Where Grit and Muscle Forge the Ultimate You.</div>
-                        <a href="/registration" class="primary-btn  btn-normal">Appointment</a>
+                        <a href="/userRegistration" class="primary-btn  btn-normal">Appointment</a>
                     </div>
                 </div>
             </div>
