--- a/src/main/resources/templates/blog-details3.html
+++ b/src/main/resources/templates/blog-details3.html
@@ -38,7 +38,7 @@
 		<i class="fa fa-close"></i>
 	</div>
 	<div class="canvas-search search-switch">
-		<i class="fa fa-search"></i>
+		
 	</div>
 	<nav class="canvas-menu mobile-menu">
 		<ul>
@@ -109,7 +109,7 @@
 			<div class="col-lg-3">
 				<div class="top-option">
 					<div class="to-search search-switch">
-						<i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;
 						<a href="/userLogin"><i class="fa fa-user"></i></a>
 					</div>
 					<div class="to-social">
