--- a/src/main/resources/templates/class-timetable.html
+++ b/src/main/resources/templates/class-timetable.html
@@ -160,7 +160,7 @@
                 <div class="col-lg-6">
                     <div class="table-controls">
                         <ul>
-                            <li class="active" data-tsfilter="all">All event</li>
+                            <li class="active" data-tsfilter="all"></li>
                             <li data-tsfilter="fitness">Fitness tips</li>
                             <li data-tsfilter="motivation">Motivation</li>
                             <li data-tsfilter="workout">Workout</li>
