--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -41,7 +41,7 @@
           <p>Looking forward to dominating and conquering this fitness journey with you!</p>
 <!--          <form action="#" class="search-404">-->
 <!--            <input type="text" placeholder="Enter your keyword">-->
-<!--            <button type="submit"><i class="fa fa-search"></i></button>-->
+<!--            <button type="submit"></button>-->
 <!--          </form>-->
           <a href="/userLogin"><i class="fa fa-home"></i>Login to your account</a>
         </div>
@@ -58,7 +58,7 @@
     <i class="fa fa-close"></i>
   </div>
   <div class="canvas-search search-switch">
-    <i class="fa fa-search"></i>
+    
   </div>
   <nav class="canvas-menu mobile-menu">
     <ul>
@@ -129,7 +129,7 @@
       <div class="col-lg-3">
         <div class="top-option">
           <div class="to-search search-switch">
-            <i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;
             <a href="/userLogin"><i class="fa fa-user"></i></a>
           </div>
           <div class="to-social">
