--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -38,7 +38,7 @@
 		<i class="fa fa-close"></i>
 	</div>
 	<div class="canvas-search search-switch">
-		<i class="fa fa-search"></i>
+		
 	</div>
 	<nav class="canvas-menu mobile-menu">
 		<ul>
@@ -58,7 +58,7 @@
 					<!--                        <li><a href="/404">404</a></li>-->
 				</ul>
 			</li>
-			<li><a href="/userRegistration">Registration</a></li>
+			<li><a href="/useruserRegistration">Registration</a></li>
 		</ul>
 	</nav>
 	<div id="mobile-menu-wrap"></div>
@@ -102,14 +102,14 @@
 								<!--                                    <li><a href="/404">404</a></li>-->
 							</ul>
 						</li>
-						<li><a href="userRegistration">Registration</a></li>
+						<li><a href="useruserRegistration">Registration</a></li>
 					</ul>
 				</nav>
 			</div>
 			<div class="col-lg-3">
 				<div class="top-option">
 					<div class="to-search search-switch">
-						<i class="fa fa-search"></i>&nbsp;&nbsp;&nbsp;
+						&nbsp;&nbsp;&nbsp;
 						<a href="/userLogin"><i class="fa fa-user"></i></a>
 					</div>
 					<div class="to-social">
@@ -256,7 +256,7 @@
 						<li><b>You Decide:</b> You can choose how often you want to do the exercises.</li>
 						<li><b>Personalized:</b> Provides you a workout-specific based on your goals.</li>
 					</ul>
-					<a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+					<a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
 					<!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
 				</div>
 			</div>
@@ -276,7 +276,7 @@
 						<li><b>See Progress:</b> You'll notice you're getting better and stronger.</li>
 
 					</ul>
-					<a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+					<a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
 					<!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
 				</div>
 			</div>
@@ -297,7 +297,7 @@
 						<li><b>Continuous Support:</b> Ongoing assistance as you progress on your journey.</li>
 
 					</ul>
-					<a href="/registration" class="primary-btn pricing-btn">Enroll now</a>
+					<a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
 					<!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
 				</div>
 			</div>
