Oct 28, 2023. (User and Admin now have login and home page)

--- a/src/main/resources/templates/class-timetable.html
+++ b/src/main/resources/templates/class-timetable.html
@@ -160,7 +160,7 @@
                 <div class="col-lg-6">
                     <div class="table-controls">
                         <ul>
-                            <li class="active" data-tsfilter="all"></li>
+                            <li class="active" data-tsfilter="all">All events</li>
                             <li data-tsfilter="fitness">Fitness tips</li>
                             <li data-tsfilter="motivation">Motivation</li>
                             <li data-tsfilter="workout">Workout</li>
@@ -310,14 +310,7 @@
 <!-- Footer Section End -->
 
     <!-- Search model Begin -->
-    <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
-        </div>
-    </div>
+    
     <!-- Search model end -->
 
     <!-- Js Plugins -->
