--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -58,7 +58,7 @@
                     <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
-            <li><a href="/useruserRegistration">Registration</a></li>
+            <li><a href="/userRegistration">Registration</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
@@ -102,7 +102,7 @@
                                 <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
-                        <li><a href="useruserRegistration">Registration</a></li>
+                        <li><a href="userRegistration">Registration</a></li>
                     </ul>
                 </nav>
             </div>
@@ -311,14 +311,7 @@
 <!-- Footer Section End -->
 
     <!-- Search model Begin -->
-    <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
-        </div>
-    </div>
+    
     <!-- Search model end -->
 
     <!-- Js Plugins -->
