--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -425,14 +425,14 @@
     <!-- Footer Section End -->
 
    <!-- Search model Begin -->
-   <div class="search-model">
-       <div class="h-100 d-flex align-items-center justify-content-center">
-           <div class="search-close-switch">+</div>
-           <form class="search-model-form">
-               <input type="text" id="search-input" placeholder="Search here.....">
-           </form>
-       </div>
-   </div>
+<!--   <div class="search-model">-->
+<!--       <div class="h-100 d-flex align-items-center justify-content-center">-->
+<!--           <div class="search-close-switch">+</div>-->
+<!--           <form class="search-model-form">-->
+<!--               <input type="text" id="search-input" placeholder="Search here.....">-->
+<!--           </form>-->
+<!--       </div>-->
+<!--   </div>-->
    <!-- Search model end -->
 
     <!-- Js Plugins -->
