--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -58,7 +58,7 @@
                     <!--                        <li><a href="/404">404</a></li>-->
                 </ul>
             </li>
-            <li><a href="/userRegistration">Registration</a></li>
+            <li><a th:href="${user == null ? '/userRegistration' : '/userLogin'}">Registration</a></li>
         </ul>
     </nav>
     <div id="mobile-menu-wrap"></div>
@@ -102,7 +102,7 @@
                                 <!--                                    <li><a href="/404">404</a></li>-->
                             </ul>
                         </li>
-                        <li><a href="userRegistration">Registration</a></li>
+                        <li><a th:href="${user == null ? '/userRegistration' : '/userLogin'}">Registration</a></li>
                     </ul>
                 </nav>
             </div>
@@ -219,7 +219,7 @@
                     <div class="bs-text service-banner">
                         <h2>Seize the Opportunity: Register Now for Exclusive Deals!</h2>
                         <div class="bt-tips">Where Grit and Muscle Forge the Ultimate You.</div>
-                        <a href="/userRegistration" class="primary-btn  btn-normal">Appointment</a>
+                        <a th:href="${user == null ? '/userRegistration' : '/userLogin'}" class="primary-btn  btn-normal">Appointment</a>
                     </div>
                 </div>
             </div>
@@ -255,7 +255,7 @@
                         <li><b>You Decide:</b> You can choose how often you want to do the exercises.</li>
                         <li><b>Personalized:</b> Provides you a workout-specific based on your goals.</li>
                     </ul>
-                    <a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
+                    <a th:href="${user == null ? '/userRegistration' : '/userLogin'}" class="primary-btn pricing-btn">Enroll now</a>
                     <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                 </div>
             </div>
@@ -275,7 +275,7 @@
                         <li><b>See Progress:</b> You'll notice you're getting better and stronger.</li>
 
                     </ul>
-                    <a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
+                    <a th:href="${user == null ? '/userRegistration' : '/userLogin'}" class="primary-btn pricing-btn">Enroll now</a>
                     <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                 </div>
             </div>
@@ -296,7 +296,7 @@
                         <li><b>Continuous Support:</b> Ongoing assistance as you progress on your journey.</li>
 
                     </ul>
-                    <a href="/userRegistration" class="primary-btn pricing-btn">Enroll now</a>
+                    <a th:href="${user == null ? '/userRegistration' : '/userLogin'}" class="primary-btn pricing-btn">Enroll now</a>
                     <!--                        <a href="#" class="thumb-icon"><i class="fa fa-picture-o"></i></a>-->
                 </div>
             </div>
