Nov 1, 2023. (Personalized Workouts for a Program needs worked on)

--- a/src/main/resources/templates/services.html
+++ b/src/main/resources/templates/services.html
@@ -244,7 +244,7 @@
                     <h3>Ready-To-Go Program</h3>
                     <div class="pi-price">
                         <h2><s>&#8369;1500</s> &#8369;499.99 </h2>
-                        <span>MONTHLY PROGRAM (4-16 Weeks)</span>
+                        <span>MONTHLY PROGRAM (4-Week Renewal Program)</span>
                     </div>
                     <ul>
                         <li><b>Package:</b> A 4-week monthly workout plan with monthly nutrition plan and unlimited consultation</li>
