Nov 1, 2023. (Personalized Workouts are now good!)

--- a/src/main/resources/templates/clients/clientWorkout.html
+++ b/src/main/resources/templates/clients/clientWorkout.html
@@ -183,7 +183,7 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="section-title">
-          <span>Ready-To-Go</span>
+          <span th:text="${programName}"></span>
           <h2>Your Workouts</h2>
         </div>
       </div>
@@ -204,7 +204,7 @@
           <table>
             <thead>
             <tr>
-              <th>Day 1</th>
+              <th>List</th>
               <th>Week 1</th>
               <th>Reps & Sets</th>
               <th>Week 2</th>
@@ -216,7 +216,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr  th:each="workout : ${workouts}">
+            <tr th:each="workout : ${workouts}">
                 <td class="class-time" th:text="${workout.workout_name}"></td>
               <td class="dark-bg hover-bg ts-meta" data-tsmeta="workout">
                 <a th:href="${workout.workout_location}" target="_blank">Demo URL</a>
